bases/grav/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grav
  name: grav
  annotations:
    kube-score/ignore: container-image-tag,container-security-context-readonlyrootfilesystem, container-security-context-user-group-id, pod-networkpolicy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grav
  template:
    metadata:
      labels:
        app: grav
    spec:
      containers:
        - name: grav
          image: ghcr.io/clubcedille/grav:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - name: grav-accounts
              mountPath: /var/www/html/user/accounts
            - name: grav-data
              mountPath: /var/www/html/user/data
          resources:
            requests:
              cpu: 300m
              memory: 256Mi
              ephemeral-storage: 256Mi
            limits:
              cpu: 600m
              memory: 768Mi
              ephemeral-storage: 512Mi
      securityContext:
        # group 33 is www-data
        runAsUser: 33
        runAsGroup: 33
        fsGroup: 33
      volumes:
        - name: grav-accounts
          persistentVolumeClaim:
            claimName: grav-accounts-pvc
        - name: grav-data
          persistentVolumeClaim:
            claimName: grav-data-pvc
